; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_io.c_file_perms_set2.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_io.c_file_perms_set2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [20 x i8] c"Can't get file name\00", align 1
@.str.1 = private unnamed_addr constant [30 x i8] c"Can't set permissions on '%s'\00", align 1
@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32, i32*)* @file_perms_set2 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @file_perms_set2(i32* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = call i64 @apr_file_name_get(i8** %8, i32* %10)
  store i64 %11, i64* %9, align 8
  %12 = load i64, i64* %9, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %3
  %15 = load i64, i64* %9, align 8
  %16 = call i32 @_(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  %17 = call i32* (i64, i32, ...) @svn_error_wrap_apr(i64 %15, i32 %16)
  store i32* %17, i32** %4, align 8
  br label %33

18:                                               ; preds = %3
  %19 = load i8*, i8** %8, align 8
  %20 = load i32, i32* %6, align 4
  %21 = call i64 @apr_file_perms_set(i8* %19, i32 %20)
  store i64 %21, i64* %9, align 8
  %22 = load i64, i64* %9, align 8
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %31

24:                                               ; preds = %18
  %25 = load i64, i64* %9, align 8
  %26 = call i32 @_(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0))
  %27 = load i8*, i8** %8, align 8
  %28 = load i32*, i32** %7, align 8
  %29 = call i32 @try_utf8_from_internal_style(i8* %27, i32* %28)
  %30 = call i32* (i64, i32, ...) @svn_error_wrap_apr(i64 %25, i32 %26, i32 %29)
  store i32* %30, i32** %4, align 8
  br label %33

31:                                               ; preds = %18
  %32 = load i32*, i32** @SVN_NO_ERROR, align 8
  store i32* %32, i32** %4, align 8
  br label %33

33:                                               ; preds = %31, %24, %14
  %34 = load i32*, i32** %4, align 8
  ret i32* %34
}

declare dso_local i64 @apr_file_name_get(i8**, i32*) #1

declare dso_local i32* @svn_error_wrap_apr(i64, i32, ...) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i64 @apr_file_perms_set(i8*, i32) #1

declare dso_local i32 @try_utf8_from_internal_style(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
